--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jims-blog",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Jim's blog by Jekyll",
   "main": "gulpfile.js",
   "author": "Jim Yuan",
@@ -16,14 +16,15 @@
     "browsersync"
   ],
   "devDependencies": {
-    "browser-sync": "^2.26.7",
+    "browser-sync": "^2.27.7",
     "gulp": "^4.0.2",
     "gulp-autoprefixer": "^7.0.1",
     "gulp-clean-css": "^4.3.0",
-    "gulp-load-plugins": "^2.0.2",
+    "gulp-load-plugins": "^2.0.7",
     "gulp-plumber": "^1.2.1",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-uglify": "^3.0.2"
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-uglify": "^3.0.2",
+    "sass": "^1.45.1"
   }
 }
